<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/TemaTelaLogin"
    android:background="@color/verde_claro"
    tools:context=".TelaLogin">

    <ImageButton
        android:id="@+id/sair_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/icone_seta_voltar"
        android:backgroundTint="@color/preto"
        android:contentDescription="@string/desc_sair"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logo"
        style="@style/logotipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:id="@+id/conta_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        android:contentDescription="Imagem da conta"
        android:src="@drawable/img_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/user_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/nome_cliente"
        android:textColor="@color/preto"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/conta_img" />

    <EditText
        android:id="@+id/senha_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        android:textColorHint="@color/verde_escuro"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_textview" />

    <TextView
        android:id="@+id/esqueceu_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="40dp"
        android:onClick="esqSenha"
        android:text="@string/esqueci_senha"
        android:textColor="@color/preto"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/senha_et" />

    <Button
        android:id="@+id/entrar_btn"
        style="@style/botao_login"
        android:layout_width="260dp"
        android:layout_height="56dp"
        android:layout_marginVertical="60dp"
        android:background="@drawable/botao_login"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/esqueceu_senha" />

    <LinearLayout
        android:id="@+id/layout_grid_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margem_tela"
        android:layout_marginVertical="@dimen/margem_tela"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/atalhos_btn"
            style="@style/botoes_atalhos"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icone_atalhos"
            android:onClick="atalhos"
            android:text="@string/atalhos" />

        <Button
            android:id="@+id/token_btn"
            style="@style/botoes_atalhos"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:drawableTop="@drawable/icone_token"
            android:text="@string/token" />

        <Button
            android:id="@+id/contato_btn"
            style="@style/botoes_atalhos"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/icone_contato"
            android:text="@string/contato" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>