<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_claro"
    android:theme="@style/TemaTelaPrincipal"
    tools:context=".TelaPrincipal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_cabecalho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icone_notificacao" />

                <TextView
                    style="@style/logotipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nome" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ajuda" />

            </LinearLayout>

            <View
                android:id="@+id/divisor_cabecalho"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_cabecalho" />


            <LinearLayout
                android:id="@+id/layout_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divisor_cabecalho">

                <ImageView
                    style="@style/imagem_usuario"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/nome_cliente"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:background="@drawable/icone_seta_avancar" />

            </LinearLayout>

            <TextView
                android:id="@+id/label_saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/saldo_conta_corrente"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_cliente" />

            <LinearLayout
                android:id="@+id/layout_saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_saldo">

                <TextView
                    android:id="@+id/valor_saldo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/valor_saldo"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_visib_saldo"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/icone_olho_on"
                    android:onClick="alternarVisibSaldo" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/layout_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="2"
                android:orientation="horizontal"
                android:paddingVertical="10dp"
                android:useDefaultMargins="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_saldo">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_dinheiro"
                        android:text="@string/saldo_e_extrato" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_flow"
                        android:text="@string/flow" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_transferencia"
                        android:text="@string/transferencia" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_pagar_conta"
                        android:text="@string/pagar_conta" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_celular"
                        android:text="@string/recarga_celular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_cartao"
                        android:text="@string/cartao" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_objetivos"
                        android:text="@string/objetivos" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1">

                    <Button
                        style="@style/botoes_menu_principal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/icone_investimentos"
                        android:text="@string/investimentos" />
                </LinearLayout>

            </GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_grade">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/reorganizar_menu"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/configuracoes_do_app"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/termos_e_condicoes"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="sair"
                    android:paddingVertical="10dp"
                    android:text="@string/sair"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>